@@ -35,19 +35,17 @@ import hudson.scm.ChangeLogSet.Entry;
 import hudson.scm.EditType;
 import hudson.scm.NullSCM;
 import hudson.scm.RepositoryBrowser;
-import hudson.scm.SCM;
 import hudson.scm.SCMDescriptor;
 import hudson.scm.SCMRevisionState;
-import org.xml.sax.SAXException;
-
 import java.io.File;
 import java.io.IOException;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Set;
+import org.xml.sax.SAXException;
 
 /**
  * Fake SCM implementation that can report arbitrary commits from arbitrary users.
@@ -80,7 +78,7 @@ public class FakeChangeLogSCM extends NullSCM implements Serializable {
     }
 
     @Override public SCMDescriptor<?> getDescriptor() {
-        return new SCMDescriptor<SCM>(null) {};
+        return new SCMDescriptor<>(null) {};
     }
 
     public static class ChangelogAction extends InvisibleAction {
@@ -102,7 +100,7 @@ public class FakeChangeLogSCM extends NullSCM implements Serializable {
                     return new FakeChangeLogSet(build, action.entries);
                 }
             }
-            return new FakeChangeLogSet(build, Collections.emptyList());
+            return new FakeChangeLogSet(build, List.of());
         }
     }
 
@@ -119,6 +117,7 @@ public class FakeChangeLogSCM extends NullSCM implements Serializable {
             return entries.isEmpty();
         }
 
+        @Override
         public Iterator<EntryImpl> iterator() {
             return entries.iterator();
         }
@@ -158,7 +157,7 @@ public class FakeChangeLogSCM extends NullSCM implements Serializable {
 
         @Override
         public Collection<String> getAffectedPaths() {
-            return Collections.singleton(path);
+            return Set.of(path);
         }
 
         @Override
@@ -174,7 +173,7 @@ public class FakeChangeLogSCM extends NullSCM implements Serializable {
                     return EditType.EDIT;
                 }
             };
-            return Collections.singleton(affectedFile);
+            return Set.of(affectedFile);
         }
 
         private static final long serialVersionUID = 1L;
