@@ -24,8 +24,12 @@
 
 package org.jvnet.hudson.test;
 
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+import static org.junit.Assume.assumeNoException;
+import static org.junit.Assume.assumeTrue;
+
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import hudson.util.VersionNumber;
 import java.lang.ref.Reference;
 import java.lang.ref.SoftReference;
 import java.lang.ref.WeakReference;
@@ -39,11 +43,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.Callable;
 import javax.swing.BoundedRangeModel;
-
 import jenkins.model.Jenkins;
-import static org.junit.Assert.*;
-import static org.junit.Assume.assumeTrue;
-
 import org.netbeans.insane.impl.LiveEngine;
 import org.netbeans.insane.live.LiveReferences;
 import org.netbeans.insane.live.Path;
@@ -78,7 +78,7 @@ public class MemoryAssert {
     public static void assertHeapUsage(Object o, int max) throws Exception {
         // TODO could use ScannerUtils.recursiveSizeOf here
         CountingVisitor v = new CountingVisitor();
-        ScannerUtils.scan(ScannerUtils.skipNonStrongReferencesFilter(), v, Collections.singleton(o), false);
+        ScannerUtils.scan(ScannerUtils.skipNonStrongReferencesFilter(), v, Set.of(o), false);
         int memoryUsage = v.getTotalSize();
         assertTrue(o + " consumes " + memoryUsage + " bytes of heap, " + (memoryUsage - max) + " over the limit of " + max, memoryUsage <= max);
     }
@@ -128,11 +128,11 @@ public class MemoryAssert {
             f = ScannerUtils.compoundFilter(fs);
         }
         CountingVisitor v1 = new CountingVisitor();
-        ScannerUtils.scan(f, v1, Collections.singleton(Jenkins.getInstance()), false);
+        ScannerUtils.scan(f, v1, Set.of(Jenkins.get()), false);
         Set<Class<?>> old = v1.getClasses();
         callable.call();
         CountingVisitor v2 = new CountingVisitor();
-        ScannerUtils.scan(f, v2, Collections.singleton(Jenkins.getInstance()), false);
+        ScannerUtils.scan(f, v2, Set.of(Jenkins.get()), false);
         List<HistogramElement> elements = new ArrayList<>();
         for (Class<?> c : v2.getClasses()) {
             int delta = v2.getCountForClass(c) - (old.contains(c) ? v1.getCountForClass(c) : 0);
@@ -150,7 +150,6 @@ public class MemoryAssert {
     }
 
     /**
-     * <strong>Assumes Java runtime is &le; Java 8. I.e. tests will be skipped if Java 9+</strong>
      * Forces GC by causing an OOM and then verifies the given {@link WeakReference} has been garbage collected.
      * @param reference object used to verify garbage collection.
      * @param allowSoft if true, pass even if {@link SoftReference}s apparently needed to be cleared by forcing an {@link OutOfMemoryError};
@@ -158,11 +157,10 @@ public class MemoryAssert {
      */
     @SuppressFBWarnings("DLS_DEAD_LOCAL_STORE_OF_NULL")
     public static void assertGC(WeakReference<?> reference, boolean allowSoft) {
-        // Disabled on Java 9+, because below will call Netbeans Insane Engine, which in turns tries to call setAccessible
-        /* TODO version-number 1.6+:
-        assumeTrue(JavaSpecificationVersion.forCurrentJVM().isOlderThanOrEqualTo(JavaSpecificationVersion.JAVA_8));
-        */
-        assumeTrue(new VersionNumber(System.getProperty("java.specification.version")).isOlderThan(new VersionNumber("9")));
+        Runtime.Version runtimeVersion = Runtime.version();
+        assumeTrue(
+                "TODO JENKINS-67974 works on Java 17 but not 11",
+                runtimeVersion.feature() >= 17);
         assertTrue(true); reference.get(); // preload any needed classes!
         System.err.println("Trying to collect " + reference.get() + "…");
         Set<Object[]> objects = new HashSet<>();
@@ -184,7 +182,7 @@ public class MemoryAssert {
             if (!allowSoft) {
                 Object obj = reference.get();
                 if (obj != null) {
-                    softErr = "Apparent soft references to " + obj + ": " + fromRoots(Collections.singleton(obj), null, null, new Filter() {
+                    softErr = "Apparent soft references to " + obj + ": " + fromRoots(Set.of(obj), null, null, new Filter() {
                         final Field referent;
                         {
                             try {
@@ -196,7 +194,7 @@ public class MemoryAssert {
                         @Override public boolean accept(Object obj, Object referredFrom, Field reference) {
                             return !referent.equals(reference) || !(referredFrom instanceof WeakReference);
                         }
-                    }) + "; apparent weak references: " + fromRoots(Collections.singleton(obj), null, null, ScannerUtils.skipObjectsFilter(Collections.singleton(reference), true));
+                    }) + "; apparent weak references: " + fromRoots(Set.of(obj), null, null, ScannerUtils.skipObjectsFilter(Set.of(reference), true));
                     System.err.println(softErr);
                 }
             }
@@ -208,12 +206,12 @@ public class MemoryAssert {
             System.err.println("Successfully collected.");
         } else {
             System.err.println("Failed to collect " + obj + ", looking for strong references…");
-            Map<Object,Path> rootRefs = fromRoots(Collections.singleton(obj), null, null, ScannerUtils.skipNonStrongReferencesFilter());
+            Map<Object,Path> rootRefs = fromRoots(Set.of(obj), null, null, ScannerUtils.skipNonStrongReferencesFilter());
             if (!rootRefs.isEmpty()) {
                 fail(rootRefs.toString());
             } else {
                 System.err.println("Did not find any strong references to " + obj + ", looking for soft references…");
-                rootRefs = fromRoots(Collections.singleton(obj), null, null, new Filter() {
+                rootRefs = fromRoots(Set.of(obj), null, null, new Filter() {
                     final Field referent;
                     {
                         try {
@@ -230,7 +228,7 @@ public class MemoryAssert {
                     fail(rootRefs.toString());
                 } else {
                     System.err.println("Did not find any soft references to " + obj + ", looking for weak references…");
-                    rootRefs = fromRoots(Collections.singleton(obj), null, null, ScannerUtils.skipObjectsFilter(Collections.singleton(reference), true));
+                    rootRefs = fromRoots(Set.of(obj), null, null, ScannerUtils.skipObjectsFilter(Set.of(reference), true));
                     if (!rootRefs.isEmpty()) {
                         fail(rootRefs.toString());
                     } else {
@@ -253,7 +251,7 @@ public class MemoryAssert {
             // * to recognizeClass, before queue.add(cls): objects.getID(cls)
             // * to processClass, after recognize(cl): if (objects.isKnown(cl)) visitor.visitObjectReference(objects, cls, cl, null)
             // Also Path.getField confusingly returns "<changed>" when printing the Class → ClassLoader link.
-            List<Class> classes = new ArrayList<>();
+            List<Class<?>> classes = new ArrayList<>();
             @Override public void visitClass(Class cls) {
                 getID(cls);
                 super.visitClass(cls);
@@ -266,7 +264,7 @@ public class MemoryAssert {
                 super.visitObject(map, object);
                 if (object instanceof ClassLoader) {
                     if (isKnown(object)) {
-                        for (Class c : classes) {
+                        for (Class<?> c : classes) {
                             if (c.getClassLoader() == object) {
                                 visitObjectReference(this, c, object, /* cannot get a Field for Class.classLoader, but unused here anyway */ null);
                             }
@@ -297,7 +295,16 @@ public class MemoryAssert {
         }
         // TODO consider also: rootsHint2.add(Thread.getAllStackTraces().keySet()); // https://stackoverflow.com/a/3018672/12916
 
-        return engine.trace(objs, rootsHint2);
+        try {
+            return engine.trace(objs, rootsHint2);
+        } catch (NoClassDefFoundError e) {
+            if (e.getMessage().contains("MakeAccessible")) {
+                assumeNoException(e);
+                return null;
+            } else {
+                throw e;
+            }
+        }
     }
 
 }
